[tool.poetry]
name = "room-python"
version = "0.1.0"
description = ""
authors = ["kana <k.salon.du.l@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
flake8 = "^6.1.0"
black = "^23.10.1"
sqlalchemy = "^2.0.23"
pymysql = "^1.1.0"
uvicorn = "^0.24.0.post1"
fastapi = "^0.104.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
