[tool.poetry]
name = "room-test"
version = "0.1.0"
description = ""
authors = ["kana <k.salon.du.l@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
flake8 = "^6.1.0"
black = "^23.10.1"
sqlalchemy = "^2.0.23"
pymysql = "^1.1.0"
uvicorn = "^0.24.0.post1"
fastapi = "^0.104.1"
requests = "^2.31.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
alembic = "^1.13.0"
pydantic = "^2.5.2"
email-validator = "^2.1.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
